LM - Added content-wrap div class to try and fix footer placement

--- a/assets/css/lminfo_styles.css
+++ b/assets/css/lminfo_styles.css
@@ -8,9 +8,12 @@
 }
 
 .page-container {
-    margin: auto;
     position: relative;
     min-height: 100vh;
+}
+
+.content-wrap {
+    padding-bottom: 60px; /* Footer height */
 }
 
 /*Text and headers*/
